--- a/dude.serveny.streamdeck-matrix.sdPlugin/ui/increment-counter.html
+++ b/dude.serveny.streamdeck-matrix.sdPlugin/ui/increment-counter.html
@@ -11,8 +11,8 @@
     <!--
         Learn more about property inspector components at https://sdpi-components.dev/docs/components
     -->
-    <sdpi-item label="Increment By">
-        <sdpi-range setting="incrementBy" min="1" max="5" step="1" default="1" showlabels></sdpi-range>
+    <sdpi-item label="Animation Spawn Rate">
+        <sdpi-range setting="animationSpawnRate" min="0" max="1" step="0.1" default="0.5" showlabels></sdpi-range>
     </sdpi-item>
 </body>
 
