Added speed setting

--- a/dude.serveny.streamdeck-matrix.sdPlugin/ui/matrix-settings.html
+++ b/dude.serveny.streamdeck-matrix.sdPlugin/ui/matrix-settings.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <!--
-        Learn more about property inspector components at https://sdpi-components.dev/docs/components
-    -->
-    <sdpi-item label="Animation Spawn Rate">
-        <sdpi-range setting="animationSpawnRate" min="0" max="1" step="0.1" default="0.5" showlabels></sdpi-range>
+    <sdpi-item label="Speed">
+        <sdpi-range setting="animationSpeed" min="0" max="1" step="0.01" default="0.8" showlabels></sdpi-range>
+    </sdpi-item>
+    <sdpi-item label="Spawn Rate">
+        <sdpi-range setting="animationSpawnRate" min="0" max="1" step="0.1" default="1" showlabels></sdpi-range>
     </sdpi-item>
 </body>
 
