--- a/dude.serveny.streamdeck-matrix.sdPlugin/ui/matrix-settings.html
+++ b/dude.serveny.streamdeck-matrix.sdPlugin/ui/matrix-settings.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
+    <sdpi-item label="Color">
+        <sdpi-color setting="tileColor" global default="#21AE52"></sdpi-color>
+    </sdpi-item>
     <sdpi-item label="Speed">
-        <sdpi-range setting="animationSpeed" min="0" max="1" step="0.01" default="0.8" showlabels></sdpi-range>
+        <sdpi-range setting="animationSpeed" global min="0" max="1" step="0.01" default="0.8" showlabels></sdpi-range>
     </sdpi-item>
     <sdpi-item label="Spawn Rate">
-        <sdpi-range setting="animationSpawnRate" min="0" max="1" step="0.1" default="1" showlabels></sdpi-range>
+        <sdpi-range setting="animationSpawnRate" global min="0" max="1" step="0.1" default="1" showlabels></sdpi-range>
     </sdpi-item>
 </body>
 
