--- a/dude.serveny.tile-rain-matrix.sdPlugin/ui/matrix-settings.html
+++ b/dude.serveny.tile-rain-matrix.sdPlugin/ui/matrix-settings.html
@@ -17,6 +17,9 @@
     <sdpi-item label="Spawn Rate">
         <sdpi-range setting="animationSpawnRate" global min="0" max="1" step="0.1" default="1" showlabels></sdpi-range>
     </sdpi-item>
+    <sdpi-item label="Combo Increasing Difficulty">
+        <sdpi-range setting="comboDifficulty" global min="0" max="1" step="0.1" default="0.2" showlabels></sdpi-range>
+    </sdpi-item>
 </body>
 
 </html>
