--- a/dude.serveny.tile-rain-matrix.sdPlugin/ui/matrix-settings.html
+++ b/dude.serveny.tile-rain-matrix.sdPlugin/ui/matrix-settings.html
@@ -12,13 +12,14 @@
         <sdpi-color setting="tileColor" global default="#21AE52"></sdpi-color>
     </sdpi-item>
     <sdpi-item label="Speed">
-        <sdpi-range setting="animationSpeed" global min="0" max="1" step="0.01" default="0.8" showlabels></sdpi-range>
+        <sdpi-range setting="animationSpeed" global min="0" max="1" step="0.01" default="0.7" showlabels></sdpi-range>
     </sdpi-item>
     <sdpi-item label="Spawn Rate">
-        <sdpi-range setting="animationSpawnRate" global min="0" max="1" step="0.1" default="1" showlabels></sdpi-range>
+        <sdpi-range setting="animationSpawnRate" global min="0" max="1" step="0.1" default="0.8"
+            showlabels></sdpi-range>
     </sdpi-item>
     <sdpi-item label="Combo Increasing Difficulty">
-        <sdpi-range setting="comboDifficulty" global min="0" max="10" step="1" default="1" showlabels></sdpi-range>
+        <sdpi-range setting="comboDifficulty" global min="0" max="10" step="1" default="5" showlabels></sdpi-range>
     </sdpi-item>
 </body>
 
